tests/should_succeed/funcptr.jou
import "stdlib/io.jou"


def blah() -> int:
    printf("Blah!!\n")
    return 123


def main() -> int:
    f = blah
    ret = f()     # Output: Blah!!
    printf("Got %d\n", ret)  # Output: Got 123

    g: funcptr(byte*, ...) -> int = printf
    g("Hello %s\n", "World")  # Output: Hello World

    return 0
