tests/syntax_error/python_cast_byte.jou
def blah() -> None:
    x = byte("123")  # Error: byte is not a function, use 'as byte' to convert between numbers or e.g. atoi() from "stdlib/str.jou" to convert a string to int
